--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(https://images.unsplash.com/photo-1662763998542-d374336f18d8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1228&q=80);
+    background-image: url(https://media.istockphoto.com/photos/blue-textured-background-picture-id1169630303?b=1&k=20&m=1169630303&s=170667a&w=0&h=fVO3J3fsBjTuukcuSC6k69nUrhHGJWKGifcCGS-X8oE=);
     background-size: cover;
     background-position: center;
     
